@@ -1,4 +1,5 @@
 <!--- Copyright (C) Lightbend Inc. <https://www.lightbend.com> -->
+
 # Testing your application
 
 Writing tests for your application can be an involved process. Play supports [JUnit](https://junit.org/junit4/) and provides helpers and application stubs to make testing your application as easy as possible.
@@ -30,8 +31,7 @@ The default way to test a Play application is with [JUnit](https://junit.org/jun
 >   "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9998",
 >   "-Xms512M",
 >   "-Xmx1536M",
->   "-Xss1M",
->   "-XX:MaxPermSize=384M"
+>   "-Xss1M"
 > )
 > ```
 
